@@ -8,12 +8,13 @@ package com.farao_community.farao.gridcapa.task_manager.api;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import org.apache.commons.lang3.builder.ToStringBuilder;
+import org.apache.commons.lang3.builder.ToStringStyle;
 
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * @author Joris Mancini {@literal <joris.mancini at rte-france.com>}
@@ -23,31 +24,45 @@ public class TaskDto {
     private final OffsetDateTime timestamp;
     private final TaskStatus status;
     private final List<ProcessFileDto> inputs;
+    private final List<ProcessFileDto> availableInputs;
     private final List<ProcessFileDto> outputs;
     private final List<ProcessEventDto> processEvents;
+    private final List<ProcessRunDto> runHistory;
+    private final List<TaskParameterDto> parameters;
 
     @JsonCreator
     public TaskDto(@JsonProperty("id") UUID id,
                    @JsonProperty("timestamp") OffsetDateTime timestamp,
                    @JsonProperty("status") TaskStatus status,
                    @JsonProperty("inputs") List<ProcessFileDto> inputs,
+                   @JsonProperty("availableInputs") List<ProcessFileDto> availableInputs,
                    @JsonProperty("outputs") List<ProcessFileDto> outputs,
-                   @JsonProperty("processEvents") List<ProcessEventDto> processEvents) {
+                   @JsonProperty("processEvents") List<ProcessEventDto> processEvents,
+                   @JsonProperty("runHistory") List<ProcessRunDto> runHistory,
+                   @JsonProperty("parameters") List<TaskParameterDto> parameters) {
         this.id = id;
         this.timestamp = timestamp;
         this.status = status;
         this.inputs = inputs;
+        this.availableInputs = availableInputs;
         this.outputs = outputs;
         this.processEvents = processEvents;
+        this.runHistory = runHistory;
+        this.parameters = parameters;
     }
 
-    public static TaskDto emptyTask(OffsetDateTime timestamp, List<String> inputs, List<String> outputs) {
+    public static TaskDto emptyTask(OffsetDateTime timestamp,
+                                    List<String> inputs,
+                                    List<String> outputs) {
         return new TaskDto(
                 UUID.randomUUID(),
                 timestamp,
                 TaskStatus.NOT_CREATED,
-                inputs.stream().map(ProcessFileDto::emptyProcessFile).collect(Collectors.toList()),
-                outputs.stream().map(ProcessFileDto::emptyProcessFile).collect(Collectors.toList()),
+                inputs.stream().map(ProcessFileDto::emptyProcessFile).toList(),
+                List.of(),
+                outputs.stream().map(ProcessFileDto::emptyProcessFile).toList(),
+                new ArrayList<>(),
+                new ArrayList<>(),
                 new ArrayList<>());
     }
 
@@ -71,7 +86,23 @@ public class TaskDto {
         return outputs;
     }
 
+    public List<ProcessFileDto> getAvailableInputs() {
+        return availableInputs;
+    }
+
     public List<ProcessEventDto> getProcessEvents() {
         return processEvents;
+    }
+
+    public List<ProcessRunDto> getRunHistory() {
+        return runHistory;
+    }
+
+    public List<TaskParameterDto> getParameters() {
+        return parameters;
+    }
+
+    public String toString() {
+        return ToStringBuilder.reflectionToString(this, ToStringStyle.SHORT_PREFIX_STYLE);
     }
 }
